@@ -1,6 +1,6 @@
 # process this file with autoconf to get a configure script
 AC_PREREQ([2.6.0])
-AC_INIT([libdc1394],[2.0.0-rc4],[libdc1394-devel@lists.sf.net])
+AC_INIT([libdc1394],[2.0.0-rc5],[libdc1394-devel@lists.sf.net])
 AC_CONFIG_SRCDIR([dc1394/control.c])
 AM_INIT_AUTOMAKE([--warnings=all 1.9.6])
 AC_CONFIG_HEADERS([config.h])
